fixed body text on mobile

--- a/src/components/styles/Testimonials.css
+++ b/src/components/styles/Testimonials.css
@@ -14,17 +14,14 @@
 }
 
 .testimonials-body {
-    margin-top: 1em;
-    text-indent:40px;
-    font-size: 1.3em;
+    font-size: 0.9em;
 }
 
 .testimonials-pic {
     max-width: 100%;
     width: 20em;
-    height: auto;
 
-    margin: 1rem auto;    
+    margin: 2em auto;    
     display: block;
 
     border: double 7px transparent;
@@ -32,4 +29,21 @@
     background-image: linear-gradient(white, white), radial-gradient(circle at top left, #fbbb06 0%, #ec7510 20%, #e45315 30%, #ce1c63 40%, #aa1638 50%,#731c64 60%, #a54093 70%, #2f6093 80%, #579ccb 90%, #2cb3ab 100%);
     background-origin: border-box;
     background-clip: content-box, border-box;
+}
+
+@media (max-width: 768px) { 
+    .testimonials-body {
+        padding: 0 2em;
+    }
+    .testimonials-pic {
+        width: 17em;
+    }
+}
+
+.testimonials .carousel .carousel-control-prev-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='currentColor' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
+}
+
+.testimonials .carousel .carousel-control-next-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='currentColor' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E");
 }
